@startuml Classes
    enum DOCS {
        Minimundo
        Requisitos
        CasoUso
        DiagramaClasse
        PrototipoInterface
    }

    class Projeto {
    nome : string
    descricao : string
    }


    Projeto "1" -- "0..*" Modulo : projeto >

    class Modulo {
    string: nome
    string: descricao
    }


    Modulo "1" -- "0..*" Documento : modulo >

    class Documento {
    vMajor : int
    vMinor : int
    arquivo : string
    geradoIA : boolean
    origemAudio : string
    tipo_documento : DOCS

    }

    Documento "0..*" -- "0..1" Documento : é a próxima versão de >
    Documento "0..*" -- "0..*" Documento : é originado de >

@enduml
